Changes made to fix bug # 20931. Updated variables, mappings and file names from sop to spp/specimen processing procedure.
SVN-Revision: 27529

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -1497,9 +1497,9 @@ errors.distribution.invalid={0} is not a valid value in Distributed Item(s)
 #-- SPP Add/Edit Keys End --
 spp.name=Name
 spp.fileName=XML File name
-SOP.header=Specimen Processing Procedure
-SOP.Search=SPP Search
-pageOfSOP.searchResultTitle=Specimen Processing Procedure
+SPP.header=Specimen Processing Procedure
+SPP.Search=SPP Search
+pageOfSPP.searchResultTitle=Specimen Processing Procedure
 sppEvent.add.successOnly=SPP data entered successfully
 #-- SPP Add/Edit Keys End --
 
