--- a/software/caTissue/modules/NotificationService/.classpath
+++ b/software/caTissue/modules/NotificationService/.classpath
@@ -3,66 +3,67 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test/src"/>
-	<classpathentry kind="src" path="build/stubs-CaXchangeConsumerService/src"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/addressing-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/axis.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/axis-url.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/bootstrap.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cog-axis.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cog-jglobus.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cog-tomcat.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cog-url.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commonj.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-cli-2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-collections-3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-digester.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-discovery.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/concurrent.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cryptix.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cryptix32.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/cryptix-asn1.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/globus_usage_core.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/globus_usage_packets_common.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/globus_wsrf_tools_test.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/jaxrpc.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/jce-jdk13-125.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/jgss.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/junit.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/naming-common.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/naming-factory.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/naming-java.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/naming-resources.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/opensaml.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/puretls.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/resolver.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/saaj.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsdl4j.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_common.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_registry_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_registry.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_authzService_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_authzService.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_counter_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_counter.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_mgmt_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_samples_mgmt.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_core.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_provider_jce.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_test_interop_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_test_interop.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_test_unit_stubs.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_test_unit.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_test.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wsrf_tools.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/wss4j.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/xalan.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="C:/Apps/ws-core-4.0.3/lib/xmlsec.jar"/>
+    <classpathentry kind="src" path="build/stubs-CaXchangeConsumerService/src"/>
+
+	<classpathentry kind="var" path="GLOBUS/lib/addressing-1.0.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/axis.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/axis-url.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/bootstrap.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cog-axis.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cog-jglobus.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cog-tomcat.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cog-url.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commonj.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-beanutils.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-cli-2.0.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-collections-3.0.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-digester.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-discovery.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/commons-logging.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/concurrent.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cryptix.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cryptix32.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/cryptix-asn1.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/globus_usage_core.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/globus_usage_packets_common.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/globus_wsrf_tools_test.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/jaxrpc.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/jce-jdk13-125.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/jgss.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/junit.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/naming-common.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/naming-factory.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/naming-java.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/naming-resources.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/opensaml.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/puretls.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/resolver.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/saaj.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsdl4j.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_common.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_registry_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_registry.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_authzService_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_authzService.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_counter_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_counter.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_mgmt_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_samples_mgmt.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_core.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_provider_jce.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_test_interop_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_test_interop.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_test_unit_stubs.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_test_unit.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_test.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wsrf_tools.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/wss4j.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/xalan.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/xercesImpl.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/xml-apis.jar"/>
+	<classpathentry kind="var" path="GLOBUS/lib/xmlsec.jar"/>
 	<classpathentry kind="lib" path="lib/caGrid-advertisement-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/caGrid-core-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/caGrid-Introduce-serviceTools-1.4.jar"/>
