--- a/software/caTissue/modules/private_public_migrator/.classpath
+++ b/software/caTissue/modules/private_public_migrator/.classpath
@@ -2,6 +2,8 @@
   <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
+  <classpathentry kind="lib" path="../../../target/temp/tempCatissuecore/catissuecore.jar"/>
+  <classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/DynamicExtensions.jar"/>
+  <classpathentry kind="lib" path="../../../target/lib/caTissue_lib/compile_lib/hibernate-core-3.3.1.GAnci.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
