--- a/software/caTissue/modules/private_public_migrator/.project
+++ b/software/caTissue/modules/private_public_migrator/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>Private Public Migrator</name>
+  <name>catissue-privpubmigrator</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
