--- a/software/caTissue/modules/tests/struts/.classpath
+++ b/software/caTissue/modules/tests/struts/.classpath
@@ -227,25 +227,22 @@
 	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/web_inf_lib/xmlsec.jar"/>
 	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/web_inf_lib/xsdlib.jar"/>
 	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/caTissueSuite_Client_lib/poi-3.0.2-FINAL-20080204.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/caTissueSuite_Client_lib/poi-3.0.2-FINAL-20080204.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/c3p0-0.9.0.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/dbunit-2.4.8.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jaxrpc.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-common-client.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-j2ee.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-jaxws.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-jmx.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-system.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-transaction.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jbossjta.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jbossts-common.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/jnpserver.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/poi-3.0.2-FINAL-20080204.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/saaj.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/servlet.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/slf4j-api-1.5.2.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/slf4j-jcl-1.5.2.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/strutstest-2.1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/joshua/dev/svn/catissue_trunk/software/target/lib/caTissue_lib/CaTissue_TestCases_lib/strutsTestFramework.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/c3p0-0.9.0.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/dbunit-2.4.8.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-common-client.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-j2ee.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-jaxws.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-jmx.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-system.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jboss-transaction.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jbossjta.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jbossts-common.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/jnpserver.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/poi-3.0.2-FINAL-20080204.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/saaj.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/servlet.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/slf4j-api-1.5.2.jar"/>
+	<classpathentry kind="lib" path="../../../../target/lib/caTissue_lib/CaTissue_TestCases_lib/slf4j-jcl-1.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
