--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -961,6 +961,18 @@
 		<copy todir="${zip.dir}/modules/dynamic_extensions/conf" overwrite="true" verbose="true">
 			<fileset dir="${catissue.modules}/DE/conf" />
 		</copy>
+
+        <!-- caCoreSDK 4.2 -->
+        <if>
+            <not>
+                <available file="${target.dir}/dist/${cacore-sdk-4.2-src.file}" />
+            </not>
+            <then>
+                <get src="${cacore-sdk-4.2-src.url}" dest="${target.dir}/dist/${cacore-sdk-4.2-src.file}" />
+            </then>
+        </if>
+        <copy file="${target.dir}/dist/${cacore-sdk-4.2-src.file}" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
+
 		<!--<copy file="CA.war" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
 		<copy file="pathologySpecimen.war" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
 		<copy file="pathologySCG.war" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />-->
