--- a/software/caTissue/modules/caTissueStaticDataService/service.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/service.properties
@@ -1,13 +1,13 @@
 #service deployment properties
 # Need to update these properties for your local environment
 #This is the host/port of the SDK Application Service
-cql2QueryProcessorConfig_applicationHostName=localhost
-cqlQueryProcessorConfig_applicationHostPort=8080
-cqlQueryProcessorConfig_useHttpsUrl=false
+cql2QueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
+cqlQueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
+cqlQueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
 
-cqlQueryProcessorConfig_applicationHostName=localhost
-cql2QueryProcessorConfig_applicationHostPort=8080
-cql2QueryProcessorConfig_useHttpsUrl=false
+cqlQueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
+cql2QueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
+cql2QueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
 
 cqlQueryProcessorConfig_applicationName=catissuecore
 
@@ -15,22 +15,22 @@ cqlQueryProcessorConfig_applicationName=catissuecore
 # Defaults should work. By default it will use the
 # callers grid Id to query the SDK Application Service
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
-cqlQueryProcessorConfig_useGridIdentityLogin=true
+cqlQueryProcessorConfig_useGridIdentityLogin=@USE_GRID_IDENTITY_LOGIN@
 dataService_classMappingsFilename=classToQname.xml
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
-cqlQueryProcessorConfig_staticLoginUser=admin@admin.com
+cqlQueryProcessorConfig_staticLoginUser=@STATIC_LOGIN_USER@
 cql2QueryProcessorClass=edu.wustl.catissuecore.cagrid.CQL2QueryProcessor
-cql2QueryProcessorConfig_staticLoginUser=admin@admin.com
-cqlQueryProcessorConfig_staticLoginPass=Login123
+cql2QueryProcessorConfig_staticLoginUser=@STATIC_LOGIN_USER@
+cqlQueryProcessorConfig_staticLoginPass=@STATIC_LOGIN_PASS@
 cql2QueryProcessorConfig_applicationName=catissuecore
-cql2QueryProcessorConfig_staticLoginPass=Login123
+cql2QueryProcessorConfig_staticLoginPass=@STATIC_LOGIN_PASS@
 serverConfigLocation=server-config.wsdd
-cqlQueryProcessorConfig_useStaticLogin=false
-cqlQueryProcessorConfig_useLocalApiFlag=false
-cql2QueryProcessorConfig_useLocalApiFlag=false
+cqlQueryProcessorConfig_useStaticLogin=@USE_STATIC_LOGIN@
+cqlQueryProcessorConfig_useLocalApiFlag=@USE_LOCAL_API_FLAG@
+cql2QueryProcessorConfig_useLocalApiFlag=@USE_LOCAL_API_FLAG@
 queryProcessorClass=edu.wustl.catissuecore.cagrid.CQLQueryProcessor
 dataService_cql2ValidatorClasses=
-dataService_validateDomainModelFlag=true
-cql2QueryProcessorConfig_useGridIdentityLogin=true
+dataService_validateDomainModelFlag=false
+cql2QueryProcessorConfig_useGridIdentityLogin=@USE_GRID_IDENTITY_LOGIN@
 dataService_validateCqlFlag=true
-cql2QueryProcessorConfig_useStaticLogin=false
+cql2QueryProcessorConfig_useStaticLogin=@USE_STATIC_LOGIN@
