Fix the Collection protocol title validation in relation to StorageContainer and Site
SVN-Revision: 27630

--- a/software/caTissue/modules/caTissueStaticDataService/src/edu/wustl/catissuecore/domain/genericCustomConverterSets.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/src/edu/wustl/catissuecore/domain/genericCustomConverterSets.properties
@@ -74,6 +74,7 @@ edu.wustl.catissuecore.domain.CollectionProtocol.getCollectionProtocolEventColle
 edu.wustl.catissuecore.domain.CollectionProtocol.getChildCollectionProtocolCollection=java.util.HashSet
 edu.wustl.catissuecore.domain.CollectionProtocol.getStudyFormContextCollection=java.util.HashSet
 edu.wustl.catissuecore.domain.CollectionProtocol.getCoordinatorCollection=java.util.HashSet
+edu.wustl.catissuecore.domain.CollectionProtocol.getSiteCollection=java.util.HashSet
 edu.wustl.catissuecore.domain.DistributionProtocol.getDistributionSpecimenRequirementCollection=java.util.HashSet
 edu.wustl.catissuecore.domain.DistributionProtocol.getCollectionProtocolCollection=java.util.HashSet
 
