--- a/software/caTissue/modules/caTissueStaticDataService/deploy.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/deploy.properties
@@ -1,9 +1,7 @@
 #Service Deployment Properties
-#Mon Sep 12 15:47:48 EDT 2011
+#Tue Nov 15 10:43:29 EST 2011
 index.service.index.refresh_milliseconds=3600000
 perform.index.service.registration=true
 index.service.url=http\://index.training.cagrid.org\:8080/wsrf/services/DefaultIndexService
 service.deployment.prefix=cagrid
 index.service.registration.refresh_seconds=300
-
-
