Changed project name in .project.
SVN-Revision: 27664

--- a/software/caTissue/modules/DECodeGen/.project
+++ b/software/caTissue/modules/DECodeGen/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>catissue-misc</name>
+	<name>catissue-DECodeGen</name>
 	<comment></comment>
 	<projects>
 	</projects>
