--- a/software/caTissue/modules/DECodeGen/.classpath
+++ b/software/caTissue/modules/DECodeGen/.classpath
@@ -49,7 +49,6 @@
 	<classpathentry kind="var" path="GT4_LOCATION/lib/xercesImpl.jar"/>
 	<classpathentry kind="var" path="GT4_LOCATION/lib/xml-apis.jar"/>
 	<classpathentry kind="var" path="GT4_LOCATION/lib/xmlsec.jar"/>
-	<classpathentry kind="var" path="ANT_HOME/lib/ant-launcher.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-core-1.4.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-metadata-common-1.4.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-metadata-data-1.4.jar"/>
@@ -64,7 +63,45 @@
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-metadatautils-1.4.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-metadatautils-tests-1.4.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="ext/dependencies/default/jars/commons-io-1.3.1.jar"/>
 	<classpathentry kind="lib" path="ext/dependencies/default/jars/commons-lang-2.6.jar"/>
+	<classpathentry kind="var" path="ANT_HOME/lib/ant.jar"/>
+	<classpathentry kind="var" path="ANT_HOME"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/ant-contrib-1.0b3.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-core-resources-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-gaards-core-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-gaards-ui-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-grape-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-grape-resources-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-buildTools-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-core-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-core-tests-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-portal-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-portal-tests-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-updater-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-Introduce-updater-tests-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-opensaml-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-ServiceSecurityProvider-client-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-ServiceSecurityProvider-common-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-ServiceSecurityProvider-service-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/caGrid-ServiceSecurityProvider-stubs-1.4.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/castor-1.0.2.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/codegen.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jaxen-1.1.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jaxmejs-0.5.2.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jcalendar.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jdtcore.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jetc-task.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jhall.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/jprov.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/osgi.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/relaxngDatatype.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/resources.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/runtime.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/validation-2.0.0.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/wizard-0.1.12.jar"/>
+	<classpathentry kind="lib" path="ext/dependencies/default/jars/xsom14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
