--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,6 @@
 	<property name="generateforce" value="true" />
 	<property name="junit.jar" value="${lib.dir}/junit-4.1.jar" />
 	<property name="cobertura.dir" value="${target.dir}/reports/coverage" />
-	<property name="cobertura.lib" value="${base.dir}/cobertura" />
 	<property name="report.dir" value="${base.dir}/WEB-INF" />
 	<property name="catissue.applet.dir" value="${base.dir}/Applet/catissue" />
 	<property name="test.src.dir" value="${base.dir}/WEB-INF/src/edu/wustl/catissuecore/bizlogic/test" />
@@ -76,12 +75,6 @@
 		<path refid="app.classpath" />
 	</path>
 
-		<path id="cobertura.classpath">
-			<fileset dir="${cobertura.lib}">
-				<include name="cobertura.jar" />
-				<include name="**/*.jar" />
-			</fileset>
-		</path>
 
 
 	<!-- struts test case related properties -->
@@ -95,6 +88,12 @@
 		
 
 
+		<path id="cobertura.classpath">
+			<fileset dir="${cobertura.lib}">
+				<include name="cobertura.jar" />
+				<include name="**/*.jar" />
+			</fileset>
+		</path>
 		<taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
 
 	<!-- sub tasks -->
@@ -105,7 +104,7 @@
 		<mkdir dir="${target.dir}" />
 		<!-- Create the temp directory for caCORE CSM war file-->
 		<mkdir dir="${temp.dir}"/>
-		<antcall target="check.java.version"></antcall>
+		<!-- <antcall target="check.java.version"></antcall> -->
 		<copy todir="${base.dir}/custom_impl_lib" overwrite="true">
 							        <fileset file="Default_label_barcode_gen.jar" />
 							        <fileset file="label_barcode_gen_client.jar" />
@@ -223,6 +222,9 @@
 			<classpath>
 				<fileset dir="${lib.dir}">
 					<include name="*.jar" />
+				</fileset>
+				<fileset dir="./lib">
+					<include name="j2ee.jar" />
 				</fileset>
 				<pathelement location="${ant.home}\lib\ant.jar"/>
 			</classpath>
@@ -665,7 +667,7 @@
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="taggedvalues.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="paths.txt" todir="${zip.dir}" overwrite="true" />
-		<!--<copy file="cas.war" todir="${zip.dir}" overwrite="true" />-->
+		<copy file="cas.war" todir="${zip.dir}" overwrite="true" />
 
 		<copy todir="${zip.dir}/custom_impl_lib" overwrite="true">
 			        <fileset file="Default_label_barcode_gen.jar" />
@@ -801,7 +803,6 @@
 			<fileset file="${base.dir}/WEB-INF/lib/hibernate3.jar" />
 			<fileset file="${base.dir}/WEB-INF/lib/opencsv-1.8.jar" />
 			<fileset file="${base.dir}/WEB-INF/lib/struts.jar" />
-			<fileset file="${base.dir}/WEB-INF/lib/commons-digester3-3.0.jar" />
 			<fileset file="${base.dir}/extra_lib/xerces.jar" />
 		</copy>
 		<copy file="bulkOperation.properties" todir="${zip.dir}/modules/bulk_operations/conf" overwrite="true" />
@@ -816,7 +817,7 @@
 			<fileset dir="${base.dir}/CaTissueSuite_caGrid_Service" />
 		</copy>
 
-		<!--<copy file="cas.war" todir="${zip.dir}/modules/CAS/lib" overwrite="true" />-->
+		<copy file="cas.war" todir="${zip.dir}/modules/CAS/lib" overwrite="true" />
 
 		<copy file="gate.zip" todir="${zip.dir}/modules/caTIES/lib" overwrite="true" />
 		<copy todir="${zip.dir}/modules/caTIES/conf" overwrite="true">
