--- a/software/caTissue/modules/DECodeGen/build.xml
+++ b/software/caTissue/modules/DECodeGen/build.xml
@@ -46,7 +46,7 @@
     </target>
 
     <target name="runUpgrade">
-        <java failonerror="true" classname="edu.wustl.catissuecore.IntroduceFacade" fork="yes">
+        <java failonerror="true" classname="edu.wustl.catissuecore.IntroduceFacade" fork="no">
             <classpath>
                 <fileset dir="${dist.dir}"><include name="*.jar" /></fileset>
             </classpath>
