--- a/software/caTissue/modules/DECodeGen/build.xml
+++ b/software/caTissue/modules/DECodeGen/build.xml
@@ -4,7 +4,7 @@
     <property name="src.dir" value="${basedir}/src/main/java"/>
     <property name="lib.dir" value="${basedir}/ext/dependencies"/>
     <property name="dist.dir" value="${basedir}/dist"/>
-    <property name="xsdFile" value="${basedir}/gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.xsd"/>
+    <property name="xsdFile" value="${basedir}/src/test/resources/clinical_annotation.xsd"/>
     <property name="xmiFolder" value="${basedir}/src/test/resources/xmi/"/>
     <property name="outputXMLFile" value="${basedir}/src/test/resources/xmi/xmlResult.xml"/>
 
@@ -54,7 +54,7 @@
         <echo message="=================================="/>
     </target>
 
-    <target name="mergeXMIs">
+    <target name="doMergeXMIs">
         <java failonerror="true" classname="edu.wustl.catissuecore.MultipleXMIsToXMLConverter" fork="yes" dir="${basedir}">
             <classpath><fileset dir="${dist.dir}"><include name="*.jar" /></fileset></classpath>
             <classpath refid="cp" />
@@ -66,13 +66,13 @@
     </target>
 
     <!-- This target gets called on every XSD needed to be imported into DataService -->
-    <target name="runUpdate">
-        <echo message="BASEDIR: ${basedir}" />
+    <target name="doImportXSD">
+        <echo message="Importing XSD: ${xsdFile}, basedir: ${basedir}" />
         <!-- IMPORT XSD -->
-        <java failonerror="true" classname="edu.wustl.catissuecore.IntroduceFacade" fork="yes" dir="${basedir}">
+        <java failonerror="false" classname="edu.wustl.catissuecore.IntroduceFacade" fork="yes" dir="${basedir}">
             <classpath><fileset dir="${dist.dir}"><include name="*.jar" /></fileset></classpath>
             <classpath refid="cp" />
-            <arg value="../caTissueStaticDataService/"/>
+            <arg value="${basedir}/../caTissueStaticDataService/"/>
             <arg value="Catissue_cacore"/>
             <arg value="${xsdFile}"/>
         </java>
