--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -897,7 +897,9 @@
 		<copy todir="${zip.dir}/modules/caTissue/resources/csv" overwrite="true">
 			<fileset file="${resources.dir}/csv/SpecimenEvents.csv" />
 		</copy>
-
+		<copy todir="${zip.dir}/modules/caTissue/resources/csv" overwrite="true">
+					<fileset file="${resources.dir}/SpecimenEvents_PVs.csv" />
+				</copy>
 		<copy todir="${zip.dir}/modules/caTissue/resources/xml" overwrite="true">
 			<fileset file="${resources.dir}/xml/StaticModelMetaData.xsd" />
 			<fileset file="${resources.dir}/xml/StaticModelMetaData.xml" />
