--- a/software/caTissue/modules/caTissueStaticDataService/service.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/service.properties
@@ -1,36 +1,29 @@
 #service deployment properties
-# Need to update these properties for your local environment
-#This is the host/port of the SDK Application Service
-cql2QueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
-cqlQueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
-cqlQueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
-
-cqlQueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
-cql2QueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
-cql2QueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
-
-cqlQueryProcessorConfig_applicationName=catissuecore
-
-
-# Defaults should work. By default it will use the
-# callers grid Id to query the SDK Application Service
+#Fri Nov 18 14:21:08 EST 2011
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
 cqlQueryProcessorConfig_useGridIdentityLogin=@USE_GRID_IDENTITY_LOGIN@
 dataService_classMappingsFilename=classToQname.xml
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
+cqlQueryProcessorConfig_applicationName=catissue_cacore
 cqlQueryProcessorConfig_staticLoginUser=@STATIC_LOGIN_USER@
 cql2QueryProcessorClass=edu.wustl.catissuecore.cagrid.CQL2QueryProcessor
 cql2QueryProcessorConfig_staticLoginUser=@STATIC_LOGIN_USER@
+cql2QueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
 cqlQueryProcessorConfig_staticLoginPass=@STATIC_LOGIN_PASS@
-cql2QueryProcessorConfig_applicationName=catissuecore
+cql2QueryProcessorConfig_applicationName=catissue_cacore
 cql2QueryProcessorConfig_staticLoginPass=@STATIC_LOGIN_PASS@
 serverConfigLocation=server-config.wsdd
-cqlQueryProcessorConfig_useStaticLogin=@USE_STATIC_LOGIN@
+cqlQueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
+cqlQueryProcessorConfig_useStaticLogin=@STATIC_LOGIN_USER@
+cqlQueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
 cqlQueryProcessorConfig_useLocalApiFlag=@USE_LOCAL_API_FLAG@
 cql2QueryProcessorConfig_useLocalApiFlag=@USE_LOCAL_API_FLAG@
+cql2QueryProcessorConfig_useHttpsUrl=@USE_HTTPS_URL@
 queryProcessorClass=edu.wustl.catissuecore.cagrid.CQLQueryProcessor
 dataService_cql2ValidatorClasses=
-dataService_validateDomainModelFlag=false
+dataService_validateDomainModelFlag=true
+cql2QueryProcessorConfig_applicationHostName=@APPLICATION_HOST@
+cqlQueryProcessorConfig_applicationHostPort=@APPLICATION_PORT@
 cql2QueryProcessorConfig_useGridIdentityLogin=@USE_GRID_IDENTITY_LOGIN@
 dataService_validateCqlFlag=true
-cql2QueryProcessorConfig_useStaticLogin=@USE_STATIC_LOGIN@
+cql2QueryProcessorConfig_useStaticLogin=@STATIC_LOGIN_USER@
