--- a/software/caTissue/modules/core/src/main/web/WEB-INF/web.xml
+++ b/software/caTissue/modules/core/src/main/web/WEB-INF/web.xml
@@ -69,11 +69,11 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 	    <filter-class>edu.yale.its.tp.cas.client.filter.CASFilter</filter-class>
 		<init-param>
 			<param-name>edu.yale.its.tp.cas.client.filter.loginUrl</param-name>
-			<param-value>@@cas-server-url-login@@/cas/login</param-value>
+			<param-value>@@cas-server-url-login@@/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>edu.yale.its.tp.cas.client.filter.validateUrl</param-name>
-			<param-value>@@cas-server-url-validateUrl@@/cas/serviceValidate</param-value>
+			<param-value>@@cas-server-url-validateUrl@@/serviceValidate</param-value>
 		</init-param>
 		<init-param>
 			<param-name>edu.yale.its.tp.cas.client.filter.serverName</param-name>
@@ -159,6 +159,8 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 		<filter-name>CASFilter</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping> -->
+	
+	@@CASFilter@@
 
 <!-- Filter for CAS configuration finish -->
 
