* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  added the script to copy the SPP.xsd file in war * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27747

--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -366,6 +366,11 @@
 				<include name="**/*.ser" />
 			</fileset>
 		</copy>
+		<copy todir="${classes.dir}" overwrite="true">
+			<fileset dir="${resources.dir}/xml">
+				<include name="SPP.xsd"/>
+			</fileset>
+		</copy>
 	</target>
 
 	<!-- Create the Applet JAR Ends-->
