Changes made for publishing DE artifacts
SVN-Revision: 27751

--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -761,8 +761,8 @@
 			<fileset file="${resources.dir}/csv/SpecimenEvents.csv" />
 		</copy>
 		<copy todir="${zip.dir}/modules/caTissue/resources/csv" overwrite="true">
-					<fileset file="${resources.dir}/SpecimenEvents_PVs.csv" />
-				</copy>
+			<fileset file="${resources.dir}/csv/SpecimenEvents_PVs.csv" />
+		</copy>
 		<copy todir="${zip.dir}/modules/caTissue/resources/xml" overwrite="true">
 			<fileset file="${resources.dir}/xml/StaticModelMetaData.xsd" />
 			<fileset file="${resources.dir}/xml/StaticModelMetaData.xml" />
