* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any>changing script to copy the cas client.jar in custom_impl_lib instead of web-inf lib * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27784

--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -533,6 +533,7 @@
 				<exclude name="caGrid-syncgts-client-1.3.jar" />
 				<exclude name="caGrid-syncgts-common-1.3.jar" />
 				<exclude name="caGrid-syncgts-stubs-1.3.jar" />
+				<exclude name="casclient-2.1.1.jar" />
 				<exclude name="clm.jar" />
 				<exclude name="cog-axis.jar" />
 				<exclude name="cog-url.jar" />
@@ -817,6 +818,7 @@
 			<fileset file="${temp.dir}/Default_label_barcode_gen.jar" />
 			<fileset file="${temp.dir}/label_barcode_gen_client.jar" />
 			<fileset file="${compile.lib.dir}/IDPAuthenticationManager0_1.jar" />
+			<fileset file="${web_inf_lib.dir}/casclient-2.1.1.jar" />
 		</copy>
 
 		<copy file="${target.dir}/dist/dynamicextensions.zip" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
