* Task/Bug Id: Added support for creating SPP using UI * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27800

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -2506,8 +2506,8 @@ xss.failure.redirect.path=XssViolation.do
 errors.xssvulnerable=<div>Some of the fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
 unsaved.data.warning=Warning\: You are leaving this page and your data is not saved. Click OK to save the data.
 
-Warning=Warning :
-form.creation.message=Dynamic Extension Forms can be only previewed after creation using the User Interface. In order to do the data entry, the administrator has to execute "deploy_app" ant target and restart the JBoss server. Please refer to the Appendix section of Deployment Manual for more details.
+Warning=<font color="#000000"><b>Note :</b></font>
+form.creation.message=<font color="#000000"><br>1. Please take backup of the database before add or edit of a Dynamic Extension.<br>2. You need to restart the caTissue JBoss every time after add or edit of a new Dynamic Extension.<br>3. Please contact your caTissue system administrator before starting this activity.</font><br>
 
 keywordSearch.maxLimit.exceeded=The search for this keyword returned too many records. Please enter a more specific keyword.
 
